# notion-tools

./: .gitignore  CHANGELOG.rst  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
assets/: head.tex
src/: __init__.py  click_validators.py  editor.py  setup.py
src/auth_store/: __init__.py
src/tools/: collect_quotes.py  quick_capture.py  weekly_readings.py
tools/: weekly_readings.py
