[project]
name = ""
version = ""
description = ""
authors = [
    {name = "AbdulrhmnGhanem", email = "abdoghanem160@gmail.com"},
]
dependencies = [
    "black>=21.12b0",
    "keyring>=23.4.0",
    "notion-client>=0.8.0",
    "typeguard>=2.13.3",
    "todoist-api-python>=1.1.0",
    "click>=8.0.3",
    "rich>=11.1.0",
    "prompt-toolkit>=3.0.26",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
