[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-tools"
description = "My personal tools for automating Notion workflows."
authors = [{name = "Abdulrhmn Ghanem", email = "abdoghanem160@gmail.com"}]
version = "0.1.1"
dependencies = [
    "anyio==3.5.0",
    "attrs==21.4.0",
    "black==22.1.0",
    "certifi==2021.10.8",
    "cffi==1.15.0",
    "charset-normalizer==2.0.11",
    "click==8.0.3",
    "click-log==0.3.2",
    "colorama==0.4.4",
    "commonmark==0.9.1",
    "cryptography==36.0.1",
    "h11==0.12.0",
    "httpx==0.23.0",
    "idna==3.3",
    "importlib-metadata==4.10.1",
    "jeepney==0.7.1",
    "Jinja2==3.0.3",
    "keyring==23.5.0",
    "MarkupSafe==2.0.1",
    "mypy==0.931",
    "mypy-extensions==0.4.3",
    "notion-client==0.8.0",
    "pathspec==0.9.0",
    "platformdirs==2.4.1",
    "prompt-toolkit==3.0.26",
    "pycparser==2.21",
    "Pygments==2.11.2",
    "requests==2.27.1",
    "rfc3986==1.5.0",
    "rich==11.1.0",
    "scriv==0.13.0",
    "SecretStorage==3.3.1",
    "sniffio==1.2.0",
    "todoist-api-python==1.1.0",
    "tomli==2.0.0",
    "typeguard==2.13.3",
    "typing_extensions==4.0.1",
    "urllib3==1.26.8",
    "wcwidth==0.2.5",
    "zipp==3.7.0",
    ]

[project.scripts]
weekly_readings = "tools.weekly_readings:cli"
capture = "tools.quick_capture:cli"
collect-quotes = "tools.collect_quotes:cli"
